--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 
 #app {
   height: 96vh;
-  width: 54vh;
+  width: 100%;
   background: -webkit-linear-gradient(bottom left, #f76464, #ff8605, #EC4E91, #9535D3, #4DACFF);
   background: linear-gradient(to top right, #f76464, #ff8605, #EC4E91, #9535D3, #4DACFF);
   background-size: 400% 400%;
@@ -21,7 +21,7 @@
   overflow: hidden;
   box-shadow: 0 0 4vh rgba(0, 0, 0, 0.1);
 }
-@media (max-width: 740px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
+@media (max-width: 740px) and (-webkit-min-device-pixel-ratio: 1) and (orientation: portrait) {
   #app {
     width: 100%;
     height: 100%;
