--- a/css/style.css
+++ b/css/style.css
@@ -20,13 +20,12 @@
           user-select: none;
   overflow: hidden;
 }
-@media (-webkit-min-device-pixel-ratio: 1) and (orientation: portrait) {
+@media (max-width: 980px) and (-webkit-min-device-pixel-ratio: 1) and (orientation: portrait) {
   #app {
     width: 100%;
     height: 100%;
   }
 }
-
 .ui-header {
   height: 8vh;
   width: 100%;
@@ -270,10 +269,10 @@ input#switch:not(:checked) + #app {
           transform: scale(1.2);
 }
 .ui-range-track:after {
-  content: "";
+  content: "*";
   font-family: FontAwesome;
-  font-size: 4vh;
-  line-height: 8vh;
+  font-size: 10vh;
+  line-height: 11vh;
   color: #FF6850;
   text-align: center;
   top: -4vh;
